tests/fixtures/invalid/pow_none_str_float.py
# Cannot call pow() with None, Str, Float
x = pow(None, "hello", 1.0)
